2000-06-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* router/libdb/header.c:
	    Allow just about *any* character to appear at headers
	    database key fields..  old limits were too strict anyway.

	* proto/post-install.sh.in:
	    More minor tweaks.

2000-05-28  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/Makefilein, proto/post-install.sh.in:
	    Small fixes that disjoint installation test shows up..

2000-05-26  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c, transports/smtp/smtp.h:
	    Cosmetics-like things about diagnostics tracking.

	* proto/newdb.in, proto/newdbprocessor.in, proto/post-install.sh.in:
	    These are all PERL scripts now -- that last one should be
	    renamed, thinking about it...

2000-05-25  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtptls.c:
	    Proper network timeout monitored non-blocking wrapper
	    for SSL_connect()  code.

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Reworked diagnostics codes a bit to collect only relevant
	    SMTP transaction bits per each recipient.
	    (Although still not *quite* correct for problems diagnosed
	     at DATA/dot time, which need all recipients, not just the
	     last one...)

2000-05-24  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/newdb.in:
	    Rewritten into PERL(v5) script.

	* smtpserver/rfc821scn.c, smtpserver/smtpcmds.c:
	    Eugene Crosser wanted to have:  <foo!_bar@some.dom>,
	    our scanner demanded an alphanum starter character for
	    the sub-fields of the local-part.  Now allowing also
	    the underscore as starter there -- for a username..
	    (smtpcmds.c has some diagnostics report beauty warts.)

2000-05-18  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/newdb.in, router/libdb/ndbm.c, router/libdb/dbm.c:
	    At NewDBM (ndbm) the dbm_dirfno() does not always yield
	    success at the dbm_open().  It *may* yield some scrap data